force-app/main/default/objects/Player__c/fields/Attack__c.field-meta.xml
<CustomField>
    <fullName>Attack__c</fullName>
    <label>Attack</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>