force-app/main/default/objects/Player__c/fields/Concentration__c.field-meta.xml
<CustomField>
    <fullName>Concentration__c</fullName>
    <label>Concentration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>