force-app/main/default/objects/Player__c/fields/Defense__c.field-meta.xml
<CustomField>
    <fullName>Defense__c</fullName>
    <label>Defense</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>