force-app/main/default/objects/Player__c/fields/Endurance__c.field-meta.xml
<CustomField>
    <fullName>Endurance__c</fullName>
    <label>Endurance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>