force-app/main/default/objects/Player__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <inlineHelpText>Do you have a cool player name you want to go by?</inlineHelpText>
    <label>Nickname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>