force-app/main/default/objects/Player__c/fields/Serve__c.field-meta.xml
<CustomField>
    <fullName>Serve__c</fullName>
    <label>Serve</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>