force-app/main/default/objects/Player__c/fields/Stability__c.field-meta.xml
<CustomField>
    <fullName>Stability__c</fullName>
    <label>Stability</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>